Implement external work-item hierarchy filtering
